--- a/project4/src/app/real-world/modules/account/components/register/register.component.html
+++ b/project4/src/app/real-world/modules/account/components/register/register.component.html
@@ -17,13 +17,7 @@
                id="exampleInputPassword1"
                placeholder="Password">
     </div>
-    <div class="form-group form-check">
-        <input type="checkbox"
-               class="form-check-input"
-               id="exampleCheck1">
-        <label class="form-check-label"
-               for="exampleCheck1">Check me out</label>
-    </div>
     <button type="submit"
-            class="btn btn-primary">Submit</button>
+            class="btn btn-primary"
+            (click)="register()">Submit</button>
 </form>
