--- a/project9/src/app/real-world/modules/articles/components/article-list/article-list.component.html
+++ b/project9/src/app/real-world/modules/articles/components/article-list/article-list.component.html
@@ -3,9 +3,15 @@
     <div class="col-md-12">
       <h2>Article List</h2>
     </div>
+    <div class="col-md-12 text-right">
+      <button class="btn btn-sm btn-warning"
+              [routerLink]="['/','articles','new']">New Article</button>
+      <p></p>
+    </div>
   </div>
   <table class="table">
-    <thead class="thead-dark">
+    <thead class="thead-dark"
+           *ngIf="articles">
       <tr>
         <th scope="col">#</th>
         <th scope="col">Title</th>
@@ -16,6 +22,13 @@
       </tr>
     </thead>
     <tbody>
+      <ng-container *ngIf="!articles">
+        <tr>
+          <td colspan=4>
+            <em>No Articles found!</em>
+          </td>
+        </tr>
+      </ng-container>
       <ng-container *ngFor="let article of articles">
         <tr>
           <th>{{article.id}}</th>
